# mpclib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.cfg  plot-mpc.R  test-mpc.sh
cmake/: FindConfig.cmake  FindMatheval.cmake
doc/: mpclib.tex
src/: Array.hh  CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  Constraint.cc  Constraint.h  MPCProblem.cc  MPCProblem.h  MathEvaluator.cpp  MathEvaluator.h  QuadProg++.cc  QuadProg++.hh  QuadraticProblem.cc  QuadraticProblem.h  Variable.cc  Variable.h  matrix_utils.cc  matrix_utils.h  test-mpc.cc
